# Mode7

./: .clang-format  CMakeLists.txt  main.c
